# ChangeLog for app-text/bdf2psf
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/bdf2psf/ChangeLog,v 1.5 2014/07/17 13:34:16 klausman Exp $

  17 Jul 2014; Tobias Klausmann <klausman@gentoo.org> bdf2psf-1.104.ebuild:
  Keyworded on alpha, bug #500844

  04 Mar 2014; Naohiro Aota <naota@gentoo.org> bdf2psf-1.104.ebuild:
  Add ~x86-fbsd.

  23 Feb 2014; Markus Meier <maekke@gentoo.org> bdf2psf-1.104.ebuild:
  add ~arm, bug #500844

  15 Feb 2014; Akinori Hattori <hattya@gentoo.org> bdf2psf-1.104.ebuild:
  keyword ~ia64 wrt bug #500844

*bdf2psf-1.104 (10 Feb 2014)

  10 Feb 2014; Mike Gilbert <floppym@gentoo.org> +bdf2psf-1.104.ebuild,
  +metadata.xml:
  New ebuild; dependency of media-fonts/unifont.