@@ -2,15 +2,23 @@
 Hash: SHA256
 
 DIST console-setup_1.104.tar.gz 3272857 SHA256 ad3b4156b4b39f59e5d84d53eaa91858d5b4a36ecbffb3ba6b78151316ebcede SHA512 72b07a0ed955069777c1691b16753534630bcbdb5cd94f05ae95e8c27436c233598f01418fbf52a29b6ecf7d8217e6af841778d8e5d329569f2f585b538ba03e WHIRLPOOL e3a83ca20dcc9cfaecfdc075886bb0f7195b38fcfdd43a89d9efc746dff104c6e06f31704ffc2b708f228eb43f4bd76873850d29f3451cc833c31b385dc7dd8d
-EBUILD bdf2psf-1.104.ebuild 786 SHA256 3c7ab64e0cec65dc0f5e187fd3c0d7427d85b7743e466c174913beae17861235 SHA512 cd099b7f18b936b6999cb08313f1ce63403e905fd22a67b132dd6d0db934740051050fe4ef5c79fc3d66e21ca0d5a980a70be0b7d37a043e91001a8e4ac449b5 WHIRLPOOL e666d9e3df9f22fd74f967737bb6f32ac33ea8d48f7bea9e6da410b5afe136efb2e7f202c5283bb6cfe4ac82bc79b874dd5df5f91a015628ba4ce62dcb4c98c3
-MISC ChangeLog 774 SHA256 e73bc8de710c3374b33c742b14552281df37702847ffd88f3cef35d248f799e2 SHA512 781c98625352c148f0a1338dcec942a23b5dbc6dc843ea7d8c7699404c7cdf0ae242604a4307ba1157e48b1cd57e782cfc84e27df6f3dbd06a22bd6aa215fa62 WHIRLPOOL 77724b7c984883f39d43b24dba4c4d0111087039747176401973445591f8c0dddca7fd01486f5764f9d97bc73340de7317e212d005da704d031d1a1d1ade6efc
+EBUILD bdf2psf-1.104.ebuild 798 SHA256 a21ac9c474ff7ada3dae2cbc7e375bd4d663a7ceb83b3a8e35bcf79b4c11bfa3 SHA512 4729844a2cc9651aa2bec856fdf631288b3faf7059bdadcc8a488af75e09be6629395f8ecb5aa9f1aa80766536d30ddbe58b2d89f23ce5fc0c9554b754997a26 WHIRLPOOL 36cf5b467e7140e281ddba99aec8a00fa53df0ea68ff34df15653e610013188f08f80cdffd961c56b52c3419a3220388570389b41843ceae241562356adc10c6
+MISC ChangeLog 887 SHA256 eb7009e506f85e7140e8c214025cc5e898be7e9cfbbfe66dcc2221b94472440b SHA512 eab5c1e2668d7e1abca05280b80d843a7a44034b0442fe1e1c4d786a46df7977fa9560d815aa1947a019d9ae40d4728430bebc279b54be27e55787dc202bdc7f WHIRLPOOL 1343edee3ae54fe41e50671864d873d37038083713c3880306fea04a57ff30e075b6acd03ec01a80eaf275c0d936071e6a9c47417b98b8fe7d1cdbcad3ee70d8
 MISC metadata.xml 232 SHA256 8e0308eed9efea18755c3fc2161057faa2b438c4d31895e776d2d5cd5ff109df SHA512 0ec524315be6762228ff54bca53ec039e93672dcef379ef6ef0087656d5e11644aebabcc08663af4f18bdb1b254e71f2b2d3f91277e2867022b93f00d975ae88 WHIRLPOOL bd96dd794e9fdf37bea367be6ada6deb0cf7b98f1978c9e23746f98b1fc2fef931077dd59f6bff7d64856ed284d39f638fb8e0517c61b42f6a0605db09297047
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iKYEAREIAGYFAlPH0NlfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
-bnBncC5maWZ0aGhvcnNlbWFuLm5ldDFGNDg1MzU4NjMzRTAyNzA3RkY0ODA1QzAz
-RUUwM0ExQ0U1RDU0RTgACgkQA+4Doc5dVOjmCwCdHrv/r0ieFnx0lSF4DTYqyzF5
-oNcAn3rOW6+xXAB+HXUjHwkB/EcbGbiy
-=dRRl
+iQIcBAEBCAAGBQJT/9NPAAoJEJOE+m71LUu6bJEP+wUQT7Tq4uoqL60ov2Ab7uRV
+SJkJOjXUyKqPmx7M3p379zQfUr1vfsMu08nWIrdkyg0tp7WRJ+Cr0Kz1g0dkhmp6
+lXms08L5BDApa/m29hhZYkFzoDgMI0eew82ZMyElT7D1ydQV+llMSgsdCkjjJQgQ
+dvHu8t1/b0v2W0q/n6g/KK2dzrRUH4h9qrMpWRai/tXEttED6Rvp5JTo4DCZhD+d
+yDxxyRrL1RePoDQp5TcW6EuIvNhHJPpYNrKrqJ9LV5l0bamrYdHvpgSdSbdF1rLk
+pwfIkINeO8SIX1ZyVBvSKbWSN6M77yl6E6YUQIo7R7cKE5AlGZK3W/rglYkSM21y
+pKxzoxTpNb7It2MYQ18o5oR6FDrJMswjn7U88IWUa3yiCHVgqaf0K/EBGnxnDKL7
+LJC6NaNg6X7AkJZys2z26ivO0sQfNylHoO2WpFBSjTp4UrdzQmAkVTNCvJxOW5PM
+IzXA2Vb0uLNwxFEt+DyV5JhhBqVuj+DYvcG1JHsAjTWjXhCeQnLLhvYWacH2l0kB
+4wzTFmMaEMKUtg3Ov8VsF/j9NzEuQEbhRckTCTeX3Q2CGWg/hX3fA+2XJyKEE8Lo
+H/FcnizzpYbhiV2DOMlaah4sculD34ibcVe7rPqaxH1/3Ugng7DqvR4gFrLJeERf
+ArG3+/qPBrLAJl98Wqib
+=QBbm
 -----END PGP SIGNATURE-----
