@@ -15,17 +15,25 @@ EBUILD unifont-5.1.20080914.ebuild 829 SHA256 b3028e14003addf659eb0531866f400a98
 EBUILD unifont-6.3.20131006.ebuild 1026 SHA256 a609e84dbc46d933344b3f3fb8e9e6acd6980aea77e4aca25ef75eb2cc6b7021 SHA512 df8b058df645eeeda09a28fc6eaf7794fab3777253536e59d64c4eca7831c3fc9896459f2a61eb63b5adfee5accaea91de969c1a5e2dea911ba23c1ea7a8dc2a WHIRLPOOL 138f48b8d5fe27a9403365672dceebb75065075002ed752bc7fd0abb7ce8e8c83a51e9715e90c4454b770dd6a66e34b6f9327d97f2c97685a894a4c8b508023e
 EBUILD unifont-6.3.20131020.ebuild 1122 SHA256 a421e0af663d89f092d414a3246e1cf28a0d9ff1d7ad48cc91d7bc5e657e3eea SHA512 a01226f89a212e7cac46c679eed2623d5fbc3ded14adab40b342be74b6bbcb84c256658074ada472ea20b7d7da7ce750476a89e62141b7087cf759c0e07a04b9 WHIRLPOOL fad3fd974d66fcf7cbeb19363ec56eea5dbbb3d32fb875fcede1a7b675b8b09d989bc03374a12c1ce3daf9d7c85bcd50059112f710528ef8c7cd5618c3b3be92
 EBUILD unifont-6.3.20131217.ebuild 1134 SHA256 2c13060a20b2e55572160bcadb604e5bd0f7d9ed022dc9ec1d0bd1fb51930612 SHA512 129bf410f369e9360a5cf84dac04c1663fc7cfb2cb5924b7cd72f1b9f5a234528246e79308a597a25b380c8c42c04330e6001bf9365edecbb41683ad63f81c58 WHIRLPOOL 0624cd97e003dd6cbc4467afb31a97f76920aa88d12f126bccd13f3f7d4c7a6119ee30eb6feff6e36e8f1e7605efaa52f543ef4f629d9e6004595e7395b4d0cf
-EBUILD unifont-6.3.20140204.ebuild 1171 SHA256 2f3c725f37ff772ffa968c89a7844eabbf603204df67de8faf3dc532be9515fd SHA512 c1404e55a81d8f2bd502e6b8bb51bf30be7763b06232a0270ac118159ac70e7e66e1dfa59530d65d9c290d0b0f0172e62646542d5f459fa6f46f3b7df8bc3121 WHIRLPOOL f3d8b90b07377bad46f16f9476c43a1a6ea5d94eb258816c9254be620113fce0df63fd242df50b26529d8ce133bbc1526dfa8418495c9d79699f1413ea038d84
-EBUILD unifont-7.0.01.ebuild 1260 SHA256 cc81d297d9c71975307a8b6e4b502a5ece5ba0b65da8108fbb1c3c0fdae23edd SHA512 4e28c00a405a92c05f6c2d69b827546605a8fa8366f60b08ddaa6cf1945bf7fdf15ae780c531bf78aef8883b0667efe4e9d74e8ca14a406a7c3b1964091777b1 WHIRLPOOL 4eb61d75e92b51d45e1e8c15c5c02c073b5344a0b2e87f329b341eedc6b55584d14ea289f4e52ba868e0cb67e62760cb1ec374a915084ffa9cd236b4c9d10b59
-EBUILD unifont-7.0.03.ebuild 1203 SHA256 68fd3d32807f8ac1e871da3b22ee8385b9be206fb9c9baa06cf01340a6c94f24 SHA512 3adc4cbeb14917d79834cbff6f23b519bec4d2aabfde8caf073803d71fedcbd722c6ce5e3ffde0629be3deb0eab333284dbb102fd49081a3d08e2db4362ede6e WHIRLPOOL cbf9995f8fbddb83c0ad954f22edd3b7323710d1ded17a3e97331084a6232cc774416557cd93e6950c436ab420c22e17134606e45d43aefb146a440b1fd9c8a1
-MISC ChangeLog 6437 SHA256 1aed140850a5e61e4e459e99cd89676364054072751d94f600ad99d83809e2dc SHA512 3f40c3f7f53bbe4d1e4eabd079182369001a6cbfcc0185393b54e472bc8ef816271940c3fdaca31d2641722531641fec80ee8f1b0276808a821b3ab9d7af585f WHIRLPOOL d385641750c4f8fc5fed901e8c280a2057cf1b23985f04f8b5a7d4c54a5f455b79574f66b3c54e371b054292c118977334758afebee1b40d29933aaa03539a83
+EBUILD unifont-6.3.20140204.ebuild 1183 SHA256 1e93fb4e975005bbc1a80bff29e3291137050cedc99a2052b60d1129f101f625 SHA512 202eeefff273e3203d1c66756dd65ae502a5b68ee708f422f2c3beff696aade84148a9384e4162b6b553ef9183a5c572072efa2cc41b77c41f00dcd7ef302ee7 WHIRLPOOL 9b3bd92a1955faca30df20651422465e516b7aa2af06bcd0518089a7393a360de3185db596f12899447c9ca7a0045f3de0987e9d84f510ac9e624156055a24d0
+EBUILD unifont-7.0.01.ebuild 1273 SHA256 f2f929392421a60c8c927870f4d03a4a32a6543170ff80b5841f37327f64ae96 SHA512 c5e3be0af7ea037e7670c613aa7df9440d510409fa2dc3e0c9dbfd50a46bd8f7f03715910576725d0cb349f72dea40e5c4b9b3126a9710f9f099d7063109f5b5 WHIRLPOOL b8cb8fbee382007e3bc7c490327926a46ddda5722d65e4ef90da54de335b92277b81ea411c41bbd856798562543397fcfe3746da8687a214d8c876eb5168bb0f
+EBUILD unifont-7.0.03.ebuild 1216 SHA256 ef2a68dc39462efc18e109cdeb30bc73b98c4a5e560d6283f02bcb24e803d4d4 SHA512 1f40189c18802313e1a880240e173531dc80864324482a6f101770754418dd810cb152c37846582ff91b92be11b1f2589c80c3d1de8278ad1b65f3309ddd7c92 WHIRLPOOL 227a6567176010a46c68ade6fffb7d983d9af076a9ebc2cff6eb2540ee8b063fa9746e1e7f7c752adf17d63d8696d831984dfc5e9a11782e48b6fbfd8ac5ddf8
+MISC ChangeLog 6605 SHA256 0823b4fd4d392fa2b574c0f0873e772d08fdb78c321c0a22b6a0d60026944566 SHA512 32f09a3e66015358da3fdbabc3870c6be366ca058c7647a67069cc55585be82ebbabdec8cdb29f67c78646e7267260a471af6c11edd92ad28bee4ab35d15f640 WHIRLPOOL cd846314368998edea4ea9a0f9db62c86c82c197193d0eddea39dfdc7b8e2ba71401f4e8df3feadec3d159e41d47ec28951704547554b441d3ed3ded5654e617
 MISC metadata.xml 334 SHA256 657867f31c5bd8ef0a54d78c378f9df1780fed58c965546346ab8a1ed1ea75d5 SHA512 ddf528bfb06cfa89039ea78732748f0fa06b6214e3f2d37cbbee0289428c2cba4e86f17340adb7ae082d8e285ba9ec6576cd0cd4d1d336dedb0dbaa3ff4ebee7 WHIRLPOOL 8265305fb0da67d6687a3f14a7fd23cbb28d7721ef47d57b5240c338446276c74a15ee645d4ed9658d5df9ae43871d303f8529971da4869967d9e16fbe0f0671
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iKYEAREIAGYFAlPH0ONfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
-bnBncC5maWZ0aGhvcnNlbWFuLm5ldDFGNDg1MzU4NjMzRTAyNzA3RkY0ODA1QzAz
-RUUwM0ExQ0U1RDU0RTgACgkQA+4Doc5dVOjVQwCfdT6VRGu2ZY3uTYe8GjKkJO6E
-p0EAn2bOvthgfdbZFfeRiaiftpWPQ5BY
-=4Tkp
+iQIcBAEBCAAGBQJT/9RiAAoJEJOE+m71LUu6CdcP/ilWEXnqJS3DE4y0sU7AjWs6
+OjdY8i1P2Xg+8Jzf9hvol0e2TNSjXllqzwj5xCWo2MzjxZZt3wAxWXEZ0KS9j3Kj
+rWD9OmA4nzkVngHCBmNnhXR5Tv1vMTugKbTzLFyydN8+ALio/zf7fkpRIJSLKPRs
+UQYA3mEtlz9b5+8ZjZZ9n5mQ8WEHUZkUVwwLUFuoJr4sHwmisDMlJZp3iZRYK/iw
+ty6n6ZV2euq5xKm61Pj7jOKJw6PK4165q5Sux1gpeenefmqCPLYsOY6WfUeuYqyC
+30RfPcf4HqA2wScC5mtqGflxpZbT3ApfkNR3JT29Es12GCKrymJ0da+Ho4w2j/k0
+zYgB4vgXiIeqf1WOHg2IzzotuSHaYjysKuWgHvdBgnLFleguCs7dNdJyE1+XrJ73
+ReCKpIQ2//Src91hPm255glN58H576ejAUb44L5KINckVpSHAbE036svd8tSmuM4
+u4X2YWZeHq+lj7Y6b11cdATIc/gWv5NrMRYGFZMMibQOJbn8/XmBgv4RMO5AQGFi
+MVD9RcQbOUV/AqzT0yf+uy2RVk3OXd0V3Yc31mYo53IkEW3NYAxHHlmGO+8hMv0F
+D5dg+YB0NRSKOMBS5DUmI8v9MRx+vsQOUWZdIPhRRWWFmOjrmlqSRAUERolWxbiK
+ykCgcErOkCIWxSgW5hG4
+=Le5p
 -----END PGP SIGNATURE-----
