@@ -2,9 +2,9 @@ DEFINED_PHASES=compile install
 DESCRIPTION=Converter to generate console fonts from BDF source fonts
 EAPI=5
 HOMEPAGE=http://packages.debian.org/sid/bdf2psf
-KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~x86 ~x86-fbsd
+KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~x86 ~x86-fbsd
 LICENSE=GPL-2
 RDEPEND=dev-lang/perl
 SLOT=0
 SRC_URI=mirror://debian/pool/main/c/console-setup/console-setup_1.104.tar.gz
-_md5_=e03dd52982496e794dd77b7b654685ba
+_md5_=9c3ed7f736162435bd41b7c860742002
