@@ -4,10 +4,10 @@ DESCRIPTION=GNU Unifont - a Pan-Unicode X11 bitmap iso10646 font
 EAPI=5
 HOMEPAGE=http://unifoundry.com/
 IUSE=fontforge utils X
-KEYWORDS=~amd64 ~arm ~ia64 ~x86 ~x86-fbsd
+KEYWORDS=~amd64 ~arm ~ia64 ~ppc ~ppc64 ~x86 ~x86-fbsd
 LICENSE=GPL-2
 RDEPEND=utils? ( dev-lang/perl dev-perl/GD[png(-)] )
 SLOT=0
 SRC_URI=mirror://gnu/unifont/unifont-7.0.03/unifont-7.0.03.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	font	37271e0911f39dd15a28adcaf94f6956	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=097066449ac99618e65436c4957772bf
+_md5_=e306e00139ef074f4b5c79f5f5a9fdcd
