@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/unifont
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/unifont/ChangeLog,v 1.51 2014/07/17 13:34:25 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/unifont/ChangeLog,v 1.52 2014/08/29 01:13:28 blueness Exp $
+
+  29 Aug 2014; Anthony G. Basile <blueness@gentoo.org>
+  unifont-6.3.20140204.ebuild, unifont-7.0.01.ebuild, unifont-7.0.03.ebuild:
+  Keyword ~ppc ~ppc64, bug #500844
 
   17 Jul 2014; Tobias Klausmann <klausman@gentoo.org>
   unifont-6.3.20140204.ebuild:
